[package]
name = "twitter-watch"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/twitter-watch"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3", features = ["derive"] }
csv = "1"
log = "0.4"
memory-lol = "0.2"
serde = "1"
serde_derive = "1"
serde_json = { version = "1", features = ["preserve_order"] }
regex = "1"
simplelog = "0.12"
tera = "1"
thiserror = "1"
